--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 requires-python = ">=3.7"
 
 [project.scripts]
-mbox-extractor = "main:main"
+archive-extractor = "main:main"
 
 [tool.hatch.build.targets.wheel]
 include = ["main.py"]
