Add support for .7z archive extraction and update dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ authors = [
     { name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }
 ]
 dependencies = [
-    "tqdm"
+    "tqdm",
+    "py7zr"
 ]
 requires-python = ">=3.7"
 
