Update project version to 0.1.2 and enhance description
- Bump version in pyproject.toml to 0.1.2
- Update project description to include support for ZIP and 7z archives, along with password-cracking capabilities

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "archive-extractor"
-version = "0.1.1"
-description = "Recursively extract archives"
+version = "0.1.2"
+description = "📦 Recursively extract ZIP and 7z archives from directory trees, with password-cracking support"
 authors = [
     { name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }
 ]
