Refactor project structure and update documentation for version 0.2.0
- Transition from a single-module script to a Python package with a dedicated structure.
- Update `CLAUDE.md` to reflect changes in architecture and usage.
- Remove `main.py` and integrate its functionality into the new package.
- Update version in `pyproject.toml` to 0.2.0 and refine project description.
- Enhance README.md with CLI and library usage examples, including new features like custom output directories and quiet mode.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "archive-extractor"
-version = "0.1.3"
-description = "📦 Recursively extract ZIP and 7z archives from directory trees, with password-cracking support"
+version = "0.2.0"
+description = "Recursively extract ZIP and 7z archives from directory trees, with password-cracking support"
 authors = [
     { name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }
 ]
@@ -16,7 +16,4 @@ dependencies = [
 requires-python = ">=3.12"
 
 [project.scripts]
-archive-extractor = "main:main"
-
-[tool.hatch.build.targets.wheel]
-include = ["main.py"]
+archive-extractor = "archive_extractor:main"
