Update .gitignore and README.md for clarity and organization
- Add .claude/ directory to .gitignore to exclude Claude-related files.
- Update README.md to clarify password support feature and improve overall description.

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,9 @@ Thumbs.db
 # Claude Code
 .claude-sandbox.json
 *.code-workspace
+
+.claude/
+
+# Managed by tsilva/.github
+# Do not remove - synced automatically
+*.pyc
